2020-05-07  Tim Rühsen  <tim.ruehsen@gmx.de>

	* libpoke/ios-dev-file.c (ios_dev_file_open): Replace
	xmalloc and xstrdup by malloc and strdup.
	Remove include xalloc.h.

2020-05-12  Egeyar Bagcioglu  <egeyar@gmail.com>

	* libpoke/ios.c (ios_close): Update the current IOS
	only when closing the current IOS.

2020-05-12  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/Makefile.am (libpvmjitter_la_CPPFLAGS): Do not
	-D_GNU_SOURCE.
	* libpoke/pvm.jitter: Include config.h in initial-header-c,
	initial-vm1-c and initial-vm2-c now that Jitter supports it.

2020-05-12  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Struct Constructors): Fix typo in example.

2020-05-12  Tim Rühsen  <tim.ruehsen@gmx.de>

	* cfg.mk: Add sc_jemarchism_file_fd syntax-check rule.

2020-05-12  Tim Rühsen  <tim.ruehsen@gmx.de>

	* libpoke/pkl-ast.c (pkl_ast_lvalue_p): Rename 'FILE *fd'
	to 'FILE *fp'.
	(pkl_ast_print_1): Likewise.
	(pkl_ast_print): Likewise.
	* libpoke/pkl-ast.h (pkl_ast_print): Likewise.
	* libpoke/pkl-diag.c (pkl_detailed_location): Likewise.
	* libpoke/pkl-parser.c (pkl_parse_file): Likewise.
	* libpoke/pkl-parser.h (pkl_parse_file): Likewise.
	* libpoke/pkl-tab.y (load_module): Likewise.
	* libpoke/pkl.c (pkl_compile_file): Likewise.
	* poke/pk-cmd-editor.c (pk_cmd_editor): Likewise.
	* poke/pk-cmd.c (pk_cmd_exec_script): Likewise.

2020-05-12  Tim Rühsen  <tim.ruehsen@gmx.de>

	* poke/pk-mi.c (pk_mi_fd_set_nonblocking): New function.
	(pk_mi_fd_restore_blocking): New function.
	(pk_mi_loop): Set fd to blocking and restore before returning.

2020-05-12  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-map.h (pk_map_remove): New prototype.
	* poke/pk-map.c (pk_map_remove): Define.
	(free_map): Likewise.
	* poke/pk-cmd-map.c (pk_cmd_map_remove): Define.
	(map_remove_cmd): Define.
	(map_cmds): Add map_remove_cmd.
	* testsuite/poke.cmd/maps-7.pk: New test.
	* testsuite/poke.cmd/maps-8.pk: Likewise.
	* testsuite/poke.cmd/maps-9.pk: Likewise.
